docs/3.22/crd/v1/kubeControllersConfiguration.md
---
permalink: /3.22/crd/v1/kubeControllersConfiguration/
---

# crd.v1.kubeControllersConfiguration



## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withManagedFields(managedFields)`](#fn-metadatawithmanagedfields)
  * [`fn withManagedFieldsMixin(managedFields)`](#fn-metadatawithmanagedfieldsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDebugProfilePort(debugProfilePort)`](#fn-specwithdebugprofileport)
  * [`fn withEtcdV3CompactionPeriod(etcdV3CompactionPeriod)`](#fn-specwithetcdv3compactionperiod)
  * [`fn withHealthChecks(healthChecks)`](#fn-specwithhealthchecks)
  * [`fn withLogSeverityScreen(logSeverityScreen)`](#fn-specwithlogseverityscreen)
  * [`fn withPrometheusMetricsPort(prometheusMetricsPort)`](#fn-specwithprometheusmetricsport)
  * [`obj spec.controllers`](#obj-speccontrollers)
    * [`obj spec.controllers.namespace`](#obj-speccontrollersnamespace)
      * [`fn withReconcilerPeriod(reconcilerPeriod)`](#fn-speccontrollersnamespacewithreconcilerperiod)
    * [`obj spec.controllers.node`](#obj-speccontrollersnode)
      * [`fn withLeakGracePeriod(leakGracePeriod)`](#fn-speccontrollersnodewithleakgraceperiod)
      * [`fn withReconcilerPeriod(reconcilerPeriod)`](#fn-speccontrollersnodewithreconcilerperiod)
      * [`fn withSyncLabels(syncLabels)`](#fn-speccontrollersnodewithsynclabels)
      * [`obj spec.controllers.node.hostEndpoint`](#obj-speccontrollersnodehostendpoint)
        * [`fn withAutoCreate(autoCreate)`](#fn-speccontrollersnodehostendpointwithautocreate)
    * [`obj spec.controllers.policy`](#obj-speccontrollerspolicy)
      * [`fn withReconcilerPeriod(reconcilerPeriod)`](#fn-speccontrollerspolicywithreconcilerperiod)
    * [`obj spec.controllers.serviceAccount`](#obj-speccontrollersserviceaccount)
      * [`fn withReconcilerPeriod(reconcilerPeriod)`](#fn-speccontrollersserviceaccountwithreconcilerperiod)
    * [`obj spec.controllers.workloadEndpoint`](#obj-speccontrollersworkloadendpoint)
      * [`fn withReconcilerPeriod(reconcilerPeriod)`](#fn-speccontrollersworkloadendpointwithreconcilerperiod)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of KubeControllersConfiguration

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withManagedFields

```ts
withManagedFields(managedFields)
```

"ManagedFields maps workflow-id and version to the set of fields that are managed by that workflow. This is mostly for internal housekeeping, and users typically shouldn't need to set or understand this field. A workflow can be the user's name, a controller's name, or the name of a specific apply path like \"ci-cd\". The set of fields is always in the version that the workflow used when modifying the object."

### fn metadata.withManagedFieldsMixin

```ts
withManagedFieldsMixin(managedFields)
```

"ManagedFields maps workflow-id and version to the set of fields that are managed by that workflow. This is mostly for internal housekeeping, and users typically shouldn't need to set or understand this field. A workflow can be the user's name, a controller's name, or the name of a specific apply path like \"ci-cd\". The set of fields is always in the version that the workflow used when modifying the object."

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"KubeControllersConfigurationSpec contains the values of the Kubernetes controllers configuration."

### fn spec.withDebugProfilePort

```ts
withDebugProfilePort(debugProfilePort)
```

"DebugProfilePort configures the port to serve memory and cpu profiles on. If not specified, profiling is disabled."

### fn spec.withEtcdV3CompactionPeriod

```ts
withEtcdV3CompactionPeriod(etcdV3CompactionPeriod)
```

"EtcdV3CompactionPeriod is the period between etcdv3 compaction requests. Set to 0 to disable. [Default: 10m]"

### fn spec.withHealthChecks

```ts
withHealthChecks(healthChecks)
```

"HealthChecks enables or disables support for health checks [Default: Enabled]"

### fn spec.withLogSeverityScreen

```ts
withLogSeverityScreen(logSeverityScreen)
```

"LogSeverityScreen is the log severity above which logs are sent to the stdout. [Default: Info]"

### fn spec.withPrometheusMetricsPort

```ts
withPrometheusMetricsPort(prometheusMetricsPort)
```

"PrometheusMetricsPort is the TCP port that the Prometheus metrics server should bind to. Set to 0 to disable. [Default: 9094]"

## obj spec.controllers

"Controllers enables and configures individual Kubernetes controllers"

## obj spec.controllers.namespace

"Namespace enables and configures the namespace controller. Enabled by default, set to nil to disable."

### fn spec.controllers.namespace.withReconcilerPeriod

```ts
withReconcilerPeriod(reconcilerPeriod)
```

"ReconcilerPeriod is the period to perform reconciliation with the Calico datastore. [Default: 5m]"

## obj spec.controllers.node

"Node enables and configures the node controller. Enabled by default, set to nil to disable."

### fn spec.controllers.node.withLeakGracePeriod

```ts
withLeakGracePeriod(leakGracePeriod)
```

"LeakGracePeriod is the period used by the controller to determine if an IP address has been leaked. Set to 0 to disable IP garbage collection. [Default: 15m]"

### fn spec.controllers.node.withReconcilerPeriod

```ts
withReconcilerPeriod(reconcilerPeriod)
```

"ReconcilerPeriod is the period to perform reconciliation with the Calico datastore. [Default: 5m]"

### fn spec.controllers.node.withSyncLabels

```ts
withSyncLabels(syncLabels)
```

"SyncLabels controls whether to copy Kubernetes node labels to Calico nodes. [Default: Enabled]"

## obj spec.controllers.node.hostEndpoint

"HostEndpoint controls syncing nodes to host endpoints. Disabled by default, set to nil to disable."

### fn spec.controllers.node.hostEndpoint.withAutoCreate

```ts
withAutoCreate(autoCreate)
```

"AutoCreate enables automatic creation of host endpoints for every node. [Default: Disabled]"

## obj spec.controllers.policy

"Policy enables and configures the policy controller. Enabled by default, set to nil to disable."

### fn spec.controllers.policy.withReconcilerPeriod

```ts
withReconcilerPeriod(reconcilerPeriod)
```

"ReconcilerPeriod is the period to perform reconciliation with the Calico datastore. [Default: 5m]"

## obj spec.controllers.serviceAccount

"ServiceAccount enables and configures the service account controller. Enabled by default, set to nil to disable."

### fn spec.controllers.serviceAccount.withReconcilerPeriod

```ts
withReconcilerPeriod(reconcilerPeriod)
```

"ReconcilerPeriod is the period to perform reconciliation with the Calico datastore. [Default: 5m]"

## obj spec.controllers.workloadEndpoint

"WorkloadEndpoint enables and configures the workload endpoint controller. Enabled by default, set to nil to disable."

### fn spec.controllers.workloadEndpoint.withReconcilerPeriod

```ts
withReconcilerPeriod(reconcilerPeriod)
```

"ReconcilerPeriod is the period to perform reconciliation with the Calico datastore. [Default: 5m]"